--- a/.commonrc
+++ b/.commonrc
@@ -1,3 +1,5 @@
+#!/bin/sh
+
 if [ -e ${ROOTDIR}/.commonfxrc ]; then
     . ${ROOTDIR}/.commonfxrc
 fi
@@ -23,6 +25,8 @@ alias m='make install'
 alias pg='ps -e | grep '
 alias ctags='ctags -f .tags'
 alias findjavap="netstat -lpt 2> /dev/null | grep java | awk 'NR==1{print \$7}' | sed -e 's/\(.*\)\/\(.*\)/\1/'"
+
+alias gc='git commit -a -m "mod"'
 
 ulimit -c unlimited
 FIGNORE=CVS:.svn
