--- a/.commonrc
+++ b/.commonrc
@@ -26,7 +26,11 @@ alias pg='ps -e | grep '
 alias ctags='ctags -f .tags'
 alias findjavap="netstat -lpt 2> /dev/null | grep java | awk 'NR==1{print \$7}' | sed -e 's/\(.*\)\/\(.*\)/\1/'"
 
-alias gc='git commit -a -m "mod"'
+function gc(){
+    if [ 0 eq  `git commit -a -m "mod"` ]; then
+        git push
+    fi
+}
 
 
 ulimit -c unlimited
