--- a/.commonrc
+++ b/.commonrc
@@ -29,8 +29,10 @@ alias findjavap="netstat -lpt 2> /dev/null | grep java | awk 'NR==1{print \$7}' 
 function gc(){
     git commit -a -m "mod"
     if [ 0 -eq $? ]; then
-        echo "commit succeeded"
+        echo "commit done"
         git push
+    else
+        echo "nothing to commit"
     fi
 }
 
