--- a/.commonrc
+++ b/.commonrc
@@ -7,7 +7,7 @@ fi
 export NAME="kobayashi"
 export FULLNAME="Takumi Kobayashi"
 
-export PATH=/home/kobayashi/myscript:/home/kobayashi/desktop/myscript:/home/kobayashi/local/bin:/home/kobayashi/bin:/usr/local/bin:$PATH
+export PATH=/home/kobayashi/gitdirs/github/tools:/home/kobayashi/myscript:/home/kobayashi/desktop/myscript:/home/kobayashi/local/bin:/home/kobayashi/bin:/usr/local/bin:$PATH
 
 export VIMRC=~/.vimrc
 export SVN_EDITOR="vim"
