--- a/.commonrc
+++ b/.commonrc
@@ -67,7 +67,7 @@ fi
 # ruby rvm
 if [ -e ~/.rvm/scripts/rvm ]; then
     . ~/.rvm/scripts/rvm 
-    # rvm use 1.9.3 >/dev/null 2>&1
+    rvm use 1.8.7 >/dev/null 2>&1
 fi
 
 ls
