--- a/.commonrc
+++ b/.commonrc
@@ -9,6 +9,13 @@ export FULLNAME="Takumi Kobayashi"
 
 export PATH=/home/kobayashi/gitdirs/github/tools:/home/kobayashi/myscript:/home/kobayashi/desktop/myscript:/home/kobayashi/local/bin:/home/kobayashi/bin:/usr/local/bin:$PATH
 
+UID=`id | sed 's/uid=\([0-9]*\)(.*/\1/'`
+if [ $UID -eq 0 ]
+then
+    echo "root"
+    export PATH=/sbin/:/usr/local/sbin:${PATH}
+fi
+
 export VIMRC=~/.vimrc
 export SVN_EDITOR="vim"
 
