--- a/.commonrc
+++ b/.commonrc
@@ -9,8 +9,8 @@ export FULLNAME="Takumi Kobayashi"
 
 export PATH=/home/kobayashi/gitdirs/github/tools:/home/kobayashi/myscript:/home/kobayashi/desktop/myscript:/home/kobayashi/local/bin:/home/kobayashi/bin:/usr/local/bin:$PATH
 
-UID=`id | sed 's/uid=\([0-9]*\)(.*/\1/'`
-if [ $UID -eq 0 ]
+MUID=`id | sed 's/uid=\([0-9]*\)(.*/\1/'`
+if [ $MUID -eq 0 ]
 then
     echo "root"
     export PATH=/sbin/:/usr/local/sbin:${PATH}
@@ -68,7 +68,7 @@ fignore=(.svn .git)
 # node.js nvm
 if [ -e ~/gitdirs/nvm/ ]; then
     . ~/gitdirs/nvm/nvm.sh 
-    nvm use v0.11.10 > /dev/null
+    nvm use v0.11.14 > /dev/null
 fi
 
 # ruby rvm
